usernames and dates working
